Major expansion: 15k+ lines covering modern Linux performance engineering
New chapters:
- 00-troubleshooting-framework: USE/RED methods, decision trees, tool selection
- 12-observability-metrics: OpenTelemetry, SLI/SLO, distributed tracing
- 13-latency-analysis: Tail latency, coordinated omission, HdrHistogram
- 14-database-profiling: PostgreSQL, MySQL, RocksDB profiling

Major rewrites:
- 05-performance-profiling: Go pprof, Rust cargo-flamegraph, C++ VTune/Valgrind
- 08-kernel-tuning: jemalloc/tcmalloc/mimalloc deep-dive, NUMA, CXL tiering
- 10-java-jvm: Java 21+, virtual threads, ZGC, async-profiler 3.x
- 11-gpu-hpc: Nsight Systems/Compute, DCGM, AMD ROCm, MIG

Updates:
- 03-network-analysis: HTTP/2, HTTP/3/QUIC profiling
- 06-ebpf-tracing: sched_ext 6.12+, Netkit 6.7+, BPF Arena 6.9+
- 09-network-tuning: io_uring networking 5.19+
- README.md: Navigation, version requirements, curated sources
- cheatsheets/one-liners: Reorganized by problem type with eBPF alternatives

Coverage: kernel 6.12+, intermediate ~95%, senior ~85%